# numpy-hilbert-curve

./: .gitignore  coverage.json  noxfile.py  pyproject.toml  ruff.toml
.github/workflows/: main.yml
src/hilbert/: __init__.py  decode.py  encode.py  gray.py
tests/: conftest.py  test_gray.py  test_right_shift.py
